[gd_scene load_steps=6 format=3 uid="uid://cyybl5axjotgx"]

[ext_resource type="Script" uid="uid://gyisxvsvsm5a" path="res://scenes/binder/worker_action_row.gd" id="1_jsay1"]
[ext_resource type="Texture2D" uid="uid://t16adebrr2qk" path="res://assets/final/binder-button.png" id="2_isxti"]
[ext_resource type="Texture2D" uid="uid://dhjtbycxyo2gb" path="res://assets/final/binder-button-selected-export.png" id="3_aqure"]
[ext_resource type="Texture2D" uid="uid://butegaonl7dfb" path="res://assets/final/binder-button-highlighted.png" id="4_wcyxv"]
[ext_resource type="Texture2D" uid="uid://d4jm3m5g7ioux" path="res://assets/final/binder-button-selected.png" id="5_aqure"]

[node name="WorkerActionRow" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jsay1")

[node name="FireWorkerButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 111.0
offset_bottom = 59.0
texture_normal = ExtResource("2_isxti")
texture_pressed = ExtResource("3_aqure")
texture_hover = ExtResource("4_wcyxv")
stretch_mode = 0

[node name="Label" type="Label" parent="FireWorkerButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -11.5
offset_right = 45.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Fire Worker"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GiveRaiseButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 1.0
offset_right = 237.0
offset_bottom = 65.0
texture_normal = ExtResource("2_isxti")
texture_pressed = ExtResource("5_aqure")
texture_hover = ExtResource("4_wcyxv")
stretch_mode = 0

[node name="Label" type="Label" parent="GiveRaiseButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -11.5
offset_right = 45.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Give Raise"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AddToIncomeStreamButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 71.0
offset_right = 113.0
offset_bottom = 130.0
texture_normal = ExtResource("2_isxti")
texture_pressed = ExtResource("5_aqure")
texture_hover = ExtResource("4_wcyxv")
stretch_mode = 0

[node name="Label" type="Label" parent="AddToIncomeStreamButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -11.5
offset_right = 45.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Add to Job"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RelieveOfAllJobs" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 76.0
offset_right = 270.0
offset_bottom = 135.0
texture_normal = ExtResource("2_isxti")
texture_pressed = ExtResource("3_aqure")
stretch_mode = 0

[node name="Label" type="Label" parent="RelieveOfAllJobs"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -11.5
offset_right = 45.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Relieve of all Jobs"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_up" from="FireWorkerButton" to="." method="_on_fire_worker_button_button_up"]
[connection signal="button_up" from="GiveRaiseButton" to="." method="_on_give_raise_button_button_up"]
[connection signal="button_up" from="AddToIncomeStreamButton" to="." method="_on_add_to_income_stream_button_button_up"]
[connection signal="button_up" from="RelieveOfAllJobs" to="." method="_on_relieve_of_all_jobs_button_up"]
